add markdown message

--- a/WeatherPY_Brucato.ipynb
+++ b/WeatherPY_Brucato.ipynb
@@ -4,15 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WeatherPy"
+    "## WeatherPy_Brucato"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator.\n",
-    "\n"
+    "Create a Python script to visualize the weather of 500+ cities across the world of varying distance from the equator.\n",
+    "\n",
+    "Your objective is to build a series of scatter plots to showcase the following relationships:\n",
+    "\n",
+    "* Temperature (F) vs. Latitude\n",
+    "* Humidity (%) vs. Latitude\n",
+    "* Cloudiness (%) vs. Latitude\n",
+    "* Wind Speed (mph) vs. Latitude\n"
    ]
   },
   {
