--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "616"
+       "626"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,9 +1082,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "weds_env",
+   "display_name": "api_pipenv",
    "language": "python",
-   "name": "python3"
+   "name": "api_pipenv"
   },
   "language_info": {
    "codemirror_mode": {
